# vercel_test

./: index.html  vercel.json
api/: Cargo.toml  Cargo.toml.backup  new.rs
static/: font-styles.css
